# Pugo-Oric

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  Oric.files  README.md  config.cpp  config.hpp  cpu.cpp  cpu.h  datatypes.h  frontend.cpp  frontend.hpp  machine.cpp  machine.h  machine.hpp  main.cpp  memory.cpp  memory.h  memory.hpp  monitor.cpp  monitor.hpp  mos6502.cpp  mos6502.h  mos6502.hpp  mos6502_cycles.h  mos6502_disasm.cpp  mos6502_opcodes.h  mos6502_opcodes.hpp  mos6522.cpp  mos6522.h  mos6522.hpp  oric.cpp  oric.h  oric.hpp  oric.kdev4  oric.kdevelop  snapshot.cpp  snapshot.hpp  (+4 more)
.kdev4/: oric.kdev4
ROMS/: AllSuiteA.asm  AllSuiteA.lst  dayofweek.asm  dayofweek.rom  font.rom  test108k-60HZ.rom  test108k.rom
chip/: CMakeLists.txt  ay3_8912.cpp  ay3_8912.hpp  monitor.cpp  monitor.hpp  mos6502.cpp  mos6502.hpp  mos6502_cycles.hpp  mos6502_disasm.cpp  mos6502_opcodes.hpp  mos6522.cpp  mos6522.hpp  ula.cpp  ula.hpp
doc/: 6522_bit67.txt  Assembly In One Step.txt  Oric_graphics_in_details.html  eggs001a1.txt  hardware_programming.html  links.txt  phoenix.txt
doc/Oric_graphics_in_details_files/: 501709(1).html  common.bundle.3135ee5a6409396e26a2daa5f1d7a9fc.js  common.bundle.bd025bf3007ff95742135c35c9b5ea9f.js  embed.js  get  get(1)  get(2)  get(3)  get(4)  get(5)  get(6)  get(7)  launchpad-liveramp.js  launchpad.bundle.js  lounge.bundle.bd614871882846aa054257382899bc90.js  lounge.load.cd63a892ad6cfe24a51d9c0f999a4afa.js  pixel.html  recommendations.bundle.bb3216316047d5c61d9dafa6240fbf39.js  recommendations.load.68f9c7aacc535eaa36111203a38a3ade.js  saved_resource(2).html  saved_resource(3).html  saved_resource(4).html  saved_resource(5).html  saved_resource.html
old/: Makefile
tape/: CMakeLists.txt  tape.hpp  tape_blank.cpp  tape_blank.hpp  tape_tap.cpp  tape_tap.hpp
taps/: 007  COBRA  FRUITY  GALAXIAN  HUNCHBACK  MANICMINER_proper.tap  METABALLS.tap  MRWIMPY  OricKong.tap  PSY.TAP  RATSPLAT  RIPPED.tap  SCUBA  Saga.tap  SoundTracker.tap  Tetriskov.tap  WELCOME  WIMPY.TAP  XENON3  Xenon1.tap  ZODIAC  hobbit.tap  hunch-o.tap  hunchbk.tap  im10.tap  lcpintro.tap  pulsoids-uk.tap  quack.tap  roguelike-1v01.tap  sfxgen-beta02.tap  soir.tap  zorgons.tap
taps/broken/: RushHour.tap
taps/demos/: 6502oric.tap  GREETZ.tap  LOADER2.TAP
taps/multigames/: bandit.tap  colour match.tap  multigames-1_info.txt  projectiles.tap  quest.tap  reversi.tap
tests/: 6502_test.cpp  6502_tests.h  6522_test.cpp  6522_test.hpp  6522_test_control_registers.cpp  6522_test_counters.cpp  6522_test_shift_registers.cpp  6522_tests.h  CMakeLists.txt  memory_tests.h  test1.h  tests.cpp
